feat: fix consume of service in client side
